made nav bar fixed position and adjusted color for contrast

--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,6 +1,5 @@
 .Card {
   width: 320px;
-  border: black 1px solid;
   border-radius: 10px;
   height: 198px;
   background-color: #444;
