--- a/src/styles/Cards.css
+++ b/src/styles/Cards.css
@@ -5,9 +5,10 @@
 }
 
 .Cards {
+  z-index: -1;
   display: inline-block;
   display: flex;
-  margin: 0 auto;
+  margin: 0px auto;
   padding: 0;
   flex-wrap: wrap;
 }
