--- a/src/styles/Welcome.css
+++ b/src/styles/Welcome.css
@@ -3,6 +3,7 @@
   color: darkblue;
   width: auto;
   margin: 0, auto;
+  margin-top: 60px;
 }
 
 .Welcome h1 {
